# rust_api

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  init_pgvector.sql  macros.csv  my_database.sqlite  readme.md  request_example.sh  test.py
src/: basic.rs  main.rs
