[package]
name = "rust_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "7.2.0"
openai-api-rs = "4.0.7"


pgvector = { version = "0.3", features = ["postgres"] }
postgres = "0.19"
serde_json = "1"
ureq = { version = "2", features = ["json"] }

