[package]
name = "rust_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = {version="0.29.0", features=["bundled"]}
sqlite-vss = {version="0.1.2", features=["download-libs"] }

warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "7.2.0"
openai-api-rs = "4.0.7"
csv = "1.1.6"


serde_json = "1"
ureq = { version = "2", features = ["json"] }

